Review fixes: Remove changes in text-truncate class

--- a/app/javascript/dashboard/assets/scss/widgets/_conv-header.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_conv-header.scss
@@ -39,12 +39,16 @@ $resolve-button-width: 13.2rem;
   .user {
     @include flex;
     @include flex-align($x: center, $y: middle);
+    margin-right: var(--space-normal);
+    min-width: 0;
 
     .user--name {
       @include margin(0);
+      display: inline-block;
       font-size: $font-size-medium;
       line-height: 1.3;
       text-transform: capitalize;
+      width: 100%;
     }
 
     .user--profile__meta {
@@ -53,6 +57,7 @@ $resolve-button-width: 13.2rem;
       flex-direction: column;
       justify-content: flex-start;
       margin-left: $space-slab;
+      min-width: 0;
     }
 
     .user--profile__button {
